files/svc_wordpress.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wp-projeto
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
